--- a/meonggae_prj/src/main/webapp/index.html
+++ b/meonggae_prj/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>멍게장터</title>
 <script type="text/javascript">
 location.href="http://localhost/meonggae_prj/index.do";
 </script>
