퀵메뉴 구현&경로수정-js는 배포시 수정

--- a/meonggae_prj/src/main/webapp/index.html
+++ b/meonggae_prj/src/main/webapp/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>멍게장터</title>
 <script type="text/javascript">
-location.href="http://localhost/meonggae_prj/index.do";
+location.href="${pageContext.request.contextPath}/index.do";
 </script>
 </head>
 <body>
