--- a/meonggae_prj/src/main/webapp/index.html
+++ b/meonggae_prj/src/main/webapp/index.html
@@ -4,7 +4,8 @@
 <meta charset="UTF-8">
 <title>멍게장터</title>
 <script type="text/javascript">
-location.href="http://localhost/meonggae_prj/index.do";
+// location.href="http://localhost/meonggae_prj/index.do";
+location.href="http://stu8.sist.co.kr/meonggae_prj/index.do";
 </script>
 </head>
 <body>
